# CEdit

./: .gitignore  CMakeLists.txt  cmake_install.cmake  compile_commands.json  main.cpp  run-cedit.sh
Model/: RopeNode.cpp  RopeNode.h  TextDataRope.cpp  TextDataRope.h
View/: FileTabWidget.cpp  FileTabWidget.h  MainWindow.cpp  MainWindow.h  NumberedLineArea.cpp  NumberedLineArea.h  TextEditor.cpp  TextEditor.h  ViewConstants.h
